# docs/swagger.json
@@ -90,6 +90,12 @@
                             "$ref": "#/definitions/controllers.uploadResponse"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.errorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -126,6 +132,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/controllers.uploadResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.errorResponse"
                         }
                     },
                     "500": {
